--- a/Actividad1/Makefile
+++ b/Actividad1/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
 CXX = g++
 OPT = -g -Wall -O3 -Wno-unused-function -Wno-unused-variable
-PSVNOPT = --no_state_map --no_abstraction --no_backwards_moves --history_len=0
+PSVNOPT = --state_map --no_abstraction --backward_moves
 
 psvn2c_core.c:
 	cp ../src/psvn2c_core.c ./psvn2c_core.c
@@ -13,19 +13,15 @@ psvn2c_abstraction.c:
 	cp ../src/psvn2c_abstraction.c ./psvn2c_abstraction.c
 
 %.c: %.psvn psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c
-	../bin/psvn2c $(PSVNOPT) --name=$(*F) < $< > $@
+	../bin/psvn2c $(PSVNOPT) --name=$(*F) --history_len=$(N_SUFFIX) < $< > $@
 	rm -f ./psvn2c_core.c ./psvn2c_state_map.c ./psvn2c_abstraction.c
 
 .PRECIOUS: %.c
 
-%.succ: %.c ../global/succ.c
-	$(CC) $(OPT) ../global/succ.c -include $< -o $@
-	rm -f $*.c
-
-%.dfs: %.c ../algoritmos/dfs.c
-	$(CC) $(OPT) ../algoritmos/dfs.c -include $< -o $@
+%.iterative_dfs: %.c ../global/iterative_dfs.c
+	$(CXX) $(OPT) ../global/iterative_dfs.c -include $< -o $@
 	rm -f $*.c
 
 .PHONY: clean
 clean:
-	rm -fr *.succ psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~
+	rm -fr *.succ *.dist *.distSummary psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~
