--- a/Actividad1/Makefile
+++ b/Actividad1/Makefile
@@ -2,6 +2,7 @@ CC = gcc
 CXX = g++
 OPT = -g -Wall -O3 -Wno-unused-function -Wno-unused-variable
 PSVNOPT = --state_map --no_abstraction --backward_moves
+N = 0
 
 psvn2c_core.c:
 	cp ../src/psvn2c_core.c ./psvn2c_core.c
@@ -13,7 +14,7 @@ psvn2c_abstraction.c:
 	cp ../src/psvn2c_abstraction.c ./psvn2c_abstraction.c
 
 %.c: %.psvn psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c
-	../bin/psvn2c $(PSVNOPT) --name=$(*F) --history_len=$(N_SUFFIX) < $< > $@
+	../bin/psvn2c $(PSVNOPT) --name=$(*F) --history_len=$(N) < $< > $@
 	rm -f ./psvn2c_core.c ./psvn2c_state_map.c ./psvn2c_abstraction.c
 
 .PRECIOUS: %.c
@@ -21,11 +22,12 @@ psvn2c_abstraction.c:
 %.iterativedfs: %.c ../global/iterativedfs.c
 	$(CXX) $(OPT) ../global/iterativedfs.c -include $< -o $@
 	rm -f $*.c
-	
-%.dfs: %.c ../global/dfs.c
-	$(CXX) $(OPT) ../global/dfs.c -include $< -o $@
+
+%.dfid: %.c ../global/dfid.c
+	$(CXX) $(OPT) ../global/dfid.c -include $< -o $@
 	rm -f $*.c
 
 .PHONY: clean
 clean:
-	rm -fr *.succ *.dist *.iterativedfs psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
+	rm -fr *.dfid *.iterativedfs psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
+s
