Arreglados las capetaspara Act. 1, 2 y 6.

--- a/Actividad2/Makefile
+++ b/Actividad2/Makefile
@@ -19,10 +19,10 @@ psvn2c_abstraction.c:
 
 .PRECIOUS: %.c
 
-%.dfid: %.c ../global/dfid.c
-	$(CXX) $(OPT) ../global/dfid.c -include $< -o $@
+%.stateCount: %.c ../global/stateCount.cpp
+	$(CXX) $(OPT) ../global/stateCount.cpp -include $< -o $@
 	rm -f $*.c
 
 .PHONY: clean
 clean:
-	rm -fr *.dfid psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
+	rm -fr *.stateCount psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
