--- a/Actividad1/Makefile
+++ b/Actividad1/Makefile
@@ -23,6 +23,10 @@ psvn2c_abstraction.c:
 	$(CXX) $(OPT) ../global/iterativedfs.c -include $< -o $@
 	rm -f $*.c
 
+%.iterativedfs: %.c ../global/iterativedfs.c
+	$(CXX) $(OPT) ../global/iterativedfs.c -include $< -o $@
+	rm -f $*.c
+
 %.dfid: %.c ../global/dfid.c
 	$(CXX) $(OPT) ../global/dfid.c -include $< -o $@
 	rm -f $*.c
