IDA y WIDA listos para GAP y Manhatan.

--- a/Actividad4/Makefile
+++ b/Actividad4/Makefile
@@ -19,14 +19,30 @@ psvn2c_abstraction.c:
 
 .PRECIOUS: %.c
 
-%.heuristica: %.c ./heuristica.cpp
-	$(CXX) $(OPT) ./heuristica.cpp -include $< -o $@
-	rm -f $*.c
-
 %.astar: %.c ../global/astar.cpp
 	$(CXX) $(OPT) ../global/astar.cpp -include $< -o $@
 	rm -f $*.c
 
+%.heuristica: %.c ./heuristica.cpp
+	$(CXX) $(OPT) ./heuristica.cpp -include $< -o $@
+	rm -f $*.c
+
+%.idastar_manhatan: %.c ../global/idastar_manhatan.cpp
+	$(CXX) $(OPT) ../global/idastar_manhatan.cpp -include $< -o $@
+	rm -f $*.c
+
+%.idastar_gap: %.c ../global/idastar_gap.cpp
+	$(CXX) $(OPT) ../global/idastar_gap.cpp -include $< -o $@
+	rm -f $*.c
+
+%.widastar_manhatan: %.c ../global/widastar_manhatan.cpp
+	$(CXX) $(OPT) ../global/widastar_manhatan.cpp -include $< -o $@
+	rm -f $*.c
+
+%.widastar_gap: %.c ../global/widastar_gap.cpp
+	$(CXX) $(OPT) ../global/widastar_gap.cpp -include $< -o $@
+	rm -f $*.c
+
 .PHONY: clean
 clean:
-	rm -fr *.heuristica *.astar psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
+	rm -fr *.heuristica *.idastar_gap *.idastar_manhatan *.widastar_gap *.widastar_manhatan *.astar psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
