Arreglada version de las carpetas. Falta comentar os algoritmos.

--- a/Actividad5/Makefile
+++ b/Actividad5/Makefile
@@ -19,22 +19,14 @@ psvn2c_abstraction.c:
 
 .PRECIOUS: %.c
 
-%.astar_gap: %.c ../global/astar_gap.cpp
-	$(CXX) $(OPT) ../global/astar_gap.cpp -include $< -o $@
+%.widastar_manhatan: %.c ../global/widastar_manhatan.cpp
+	$(CXX) $(OPT) ../global/widastar_manhatan.cpp -include $< -o $@
 	rm -f $*.c
 
-%.astar_manhatan: %.c ../global/astar_manhatan.cpp
-	$(CXX) $(OPT) ../global/astar_manhatan.cpp -include $< -o $@
-	rm -f $*.c
-
-%.idastar_manhatan: %.c ../global/idastar_manhatan.cpp
-	$(CXX) $(OPT) ../global/idastar_manhatan.cpp -include $< -o $@
-	rm -f $*.c
-
-%.idastar_gap: %.c ../global/idastar_gap.cpp
-	$(CXX) $(OPT) ../global/idastar_gap.cpp -include $< -o $@
+%.widastar_gap: %.c ../global/widastar_gap.cpp
+	$(CXX) $(OPT) ../global/widastar_gap.cpp -include $< -o $@
 	rm -f $*.c
 
 .PHONY: clean
 clean:
-	rm -fr *.astar_gap *.astar_manhatan *.idastar_gap *.idastar_manhatan psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
+	rm -fr *.widastar_gap *.widastar_manhatan psvn2c_core.c psvn2c_state_map.c psvn2c_abstraction.c *.dSYM *.o *~ *.c
